csv history returning api and handler
